@@ -13,11 +13,13 @@ import no.nav.testnav.libs.data.pdlforvalter.v1.UtflyttingDTO;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 import static java.util.Objects.nonNull;
 import static no.nav.pdl.forvalter.utils.ArtifactUtils.getKilde;
 import static no.nav.pdl.forvalter.utils.ArtifactUtils.getMaster;
-import static no.nav.pdl.forvalter.utils.IdenttypeFraIdentUtility.getIdenttype;
+import static no.nav.pdl.forvalter.utils.IdenttypeUtility.getIdenttype;
+import static no.nav.pdl.forvalter.utils.TestnorgeIdentUtility.isTestnorgeIdent;
 import static no.nav.testnav.libs.data.pdlforvalter.v1.FolkeregisterPersonstatusDTO.FolkeregisterPersonstatus.BOSATT;
 import static no.nav.testnav.libs.data.pdlforvalter.v1.FolkeregisterPersonstatusDTO.FolkeregisterPersonstatus.DOED;
 import static no.nav.testnav.libs.data.pdlforvalter.v1.FolkeregisterPersonstatusDTO.FolkeregisterPersonstatus.FOEDSELSREGISTRERT;
@@ -37,6 +39,8 @@ public class FolkeregisterPersonstatusService implements BiValidation<Folkeregis
 
     public List<FolkeregisterPersonstatusDTO> convert(PersonDTO person) {
 
+        var touched = new AtomicBoolean(false);
+
         person.getFolkeregisterPersonstatus()
                 .forEach(status -> {
 
@@ -45,12 +49,14 @@ public class FolkeregisterPersonstatusService implements BiValidation<Folkeregis
                         handle(status, person);
                         status.setKilde(getKilde(status));
                         status.setMaster(getMaster(status, person));
+                        touched.set(true);
                     }
                 });
 
         if (person.getFolkeregisterPersonstatus().isEmpty() &&
                 !person.getFalskIdentitet().isEmpty() &&
-                person.getIdenttype() != NPID) {
+                person.getIdenttype() != NPID &&
+                !isTestnorgeIdent(person.getIdent())) {
 
             person.getFolkeregisterPersonstatus().add(handle(FolkeregisterPersonstatusDTO.builder()
                             .id(1)
@@ -59,6 +65,12 @@ public class FolkeregisterPersonstatusService implements BiValidation<Folkeregis
                             .build(),
                     person)
             );
+            touched.set(true);
+        }
+
+        if (!touched.get() && !person.getFolkeregisterPersonstatus().isEmpty()) {
+
+            handle(person.getFolkeregisterPersonstatus().getFirst(), person);
         }
 
         return person.getFolkeregisterPersonstatus();
@@ -113,18 +125,18 @@ public class FolkeregisterPersonstatusService implements BiValidation<Folkeregis
 
         } else if (!person.getBostedsadresse().isEmpty()) {
 
-            if (person.getBostedsadresse().get(0).isAdresseUtland()) {
+            if (person.getBostedsadresse().getFirst().isAdresseUtland()) {
                 personstatus.setStatus(IKKE_BOSATT);
 
-            } else if (nonNull(person.getBostedsadresse().get(0).getUkjentBosted())) {
+            } else if (nonNull(person.getBostedsadresse().getFirst().getUkjentBosted())) {
                 personstatus.setStatus(FOEDSELSREGISTRERT);
 
             } else {
                 personstatus.setStatus(BOSATT);
             }
 
-            personstatus.setGyldigFraOgMed(nonNull(person.getBostedsadresse().get(0).getGyldigFraOgMed()) ?
-                    person.getBostedsadresse().get(0).getGyldigFraOgMed() :
+            personstatus.setGyldigFraOgMed(nonNull(person.getBostedsadresse().getFirst().getGyldigFraOgMed()) ?
+                    person.getBostedsadresse().getFirst().getGyldigFraOgMed() :
                     DatoFraIdentUtility.getDato(person.getIdent()).atStartOfDay());
 
         } else if (FNR != getIdenttype(person.getIdent()) &&
